--- a/express/React/react1.html
+++ b/express/React/react1.html
@@ -6,13 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="react.js"></script>
-<script src="react-dom.js"></script>
+    
 
 <div id="QA"></div>
-<script src="react1.js">
-    
-</script>
+<script src="react.js"></script>
+<script src="react-dom.js"></script>
+<script src="react4.js"></script>
 
 </body>
 </html>
