--- a/express/React/react1.html
+++ b/express/React/react1.html
@@ -11,7 +11,7 @@
 <div id="QA"></div>
 <script src="react.js"></script>
 <script src="react-dom.js"></script>
-<script src="react4.js"></script>
+<script src="props.js"></script>
 
 </body>
 </html>
